# xadb

./: Cargo.toml
src/: battery.rs  cache.rs  cli.rs  device_select.rs  devices.rs  fps_overlay.rs  init_shell.rs  logcat.rs  main.rs  status.rs  widgets.rs
src/commands/: adb.rs  fastboot.rs
src/commands/adb/: logcat.rs
src/widgets/: fps_overlay.rs  log.rs  status.rs
