[package]
name = "xadb"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gaspar <agaspar@fb.com>"]
description = "Interactive tool for managing adb connections"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.3"
crossterm = "0.23"
home = "0.5"
lazy_static = "1.4"
quick-error = "2.0"
regex = "1.5"
serde_json = "1.0"
shell-words = "1.1"
tokio-stream = "0.1.8"
tui = "0.18"
fd-lock = "3.0.5"

[dependencies.clap]
version = "3.1.18"
features = ["cargo", "derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.18"
features = ["fs", "io-util", "macros", "process", "rt", "rt-multi-thread"]
